[package]
name = "distributed_hash_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
parking_lot = "0.12.1"
dashmap = "5.4.0"
num-traits = "0.2.15"
bincode = { version = "1.3.3" }
serde = { version = "1.0.160", features = ["derive"] }
channels = { version = "0.9.1", features = ["tokio"] }
ini = "1.3.0"
rand = "0.8.5"
